--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>tgd-casse brique</name>
+	<name>Try</name>
 	<comment></comment>
 	<projects>
 	</projects>
